--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -2,6 +2,7 @@
   --color-beige-light: #F1EFEC;
   /* --color-beige-medium: #D4C9BE; */
   --color-blue-dark: #123458;
+  --color-blue-primary: #0b79ff;
   --color-black: #030303;
   --color-white: #FFFFFF;
 
