- Se arregla el color base de los íconos de la navbar. - Puntos de consistencia UX/UI del checkout finalizados. - Limpieza de la navbar, eliminacion de templates innecesarios ahora mismo (si en un futuro queremos utilizar nombres de usuarios o algo así en la navbar podemos volver a ponerlos). - Eliminamos los matcheo de errores desde el frontend, confiamos en lo que devuelve el middleware del backend. - Se agregan unas breves explicaciones en los templates para entenderlos mejor. - Se cambian los nombres de las pages. - Se cambian los links a navigate para mantener consistencia y no mezclarlos.

--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --color-beige-light: #F1EFEC;
-  /* --color-beige-medium: #D4C9BE; */
+  --color-beige-medium: #D4C9BE;
   --color-blue-dark: #123458;
   --color-blue-primary: #0b79ff;
   --color-black: #030303;
