--- a/packages/frontend/src/components/footer/Footer.css
+++ b/packages/frontend/src/components/footer/Footer.css
@@ -45,12 +45,11 @@
   list-style: none;
   padding: 0;
   margin: 0;
-   text-align: left;
+  text-align: left;
 }
 
 .footer-links li {
   margin-bottom: 6px;
-  
 }
 
 .footer-links a {
@@ -60,7 +59,7 @@
 }
 
 .footer-links a:hover {
-  color: #ffd700;
+  color: #fff;
 }
 
 .footer-icons {
