--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -5,6 +5,7 @@
   --color-blue-primary: #0b79ff;
   --color-black: #030303;
   --color-white: #FFFFFF;
+  --color-primary-hover: #0966d6;
 
   --color-btn-primary-cyan: #007bff;
   --color-btn-primary-blue: #202227;
