--- a/packages/frontend/src/components/navbar/Navbar.css
+++ b/packages/frontend/src/components/navbar/Navbar.css
@@ -41,7 +41,7 @@
   display: flex;
   align-items: center;
   background: #F5F5F5;
-  border-radius: 8px;
+  border-radius: 10px;
   padding: 0 16px;
   width: 100%;
   height: 45px;
@@ -95,6 +95,7 @@
   border-right: none;
   border-bottom: none; 
   transition: all 3s ease;
+  cursor: pointer;
 }
 
 
