--- a/packages/frontend/src/features/home/Home.css
+++ b/packages/frontend/src/features/home/Home.css
@@ -20,7 +20,7 @@ body {
 .banner-text {
   background: rgba(255, 255, 255, 0.7); /* blanco translúcido */
   padding: 1rem 2rem;
-  border-radius: 12px;
+  border-radius: 10px;
   margin-bottom: 30px;                /* separación desde el borde inferior */
   text-align: center;
   backdrop-filter: blur(5px);         /* opcional: desenfoca el fondo */
@@ -53,16 +53,12 @@ body {
   overflow: hidden;
 }
 
-.ver-mas-btn::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: linear-gradient(135deg, #D4C9BE 0%, #F1EFEC 100%);
-  opacity: 0;
-  transition: opacity 0.35s ease;
-  border-radius: inherit;
-  z-index: 0;
-}
+
+.ver-mas-btn:hover{
+  background-color: #0966d6;
+  box-shadow: 0 6px 16px rgba(11, 121, 255, 0.4);
+  transform: translateY(-1px);
+} 
 
 .ver-mas-btn span {
   position: relative;
